--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "gatsby": "^5.14.6",
+    "gatsby-plugin-image": "^3.15.0",
     "gatsby-source-shopify": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
